plugins {
    alias(libs.plugins.android.application)
    alias(libs.plugins.google.services)
}

android {
    namespace 'com.golden.geese'
    compileSdk {
        version = release(37) {
            minorApiLevel = 1
        }
    }

    defaultConfig {
        applicationId "com.golden.geese"
        minSdk 26
        targetSdk 36
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            optimization {
                enable false
            }
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    buildFeatures {
        viewBinding true
    }
}

tasks.withType(Test).configureEach {
    jvmArgs '-Dnet.bytebuddy.experimental=true'
}

dependencies {
    implementation libs.activity.ktx
    implementation libs.annotation
    implementation libs.appcompat
    implementation libs.cardview
    implementation libs.constraintlayout
    implementation libs.fragment
    implementation libs.lifecycle.livedata.ktx
    implementation libs.lifecycle.viewmodel.ktx
    implementation libs.material
    implementation platform(libs.firebase.bom)
    implementation libs.firebase.auth
    implementation libs.firebase.database
    implementation libs.okhttp
    implementation libs.glide
    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
    testImplementation libs.mockito.inline
    testImplementation libs.junit
    androidTestImplementation libs.espresso.core
    androidTestImplementation libs.ext.junit

}